--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -22,11 +22,11 @@
   <div class="mx-7 uppercase text-xl font-bold text-black">
     {{section.settings.title}}
   </div>
-  <div class="mx-7 mt-3 text-base font-bold text-black">
+  <div class="mx-7 mt-3 text-sm font-bold text-black">
     {{section.settings.sub}}
   </div>
-  <div class="mx-6 font-bold text-black"">
-    <div class="bg-red rounded-50 flex justify-center items-center text-white text-center">
+  <div class="mx-6 my-3 font-bold text-black">
+    <div class="bg-red-600 rounded-[100px] text-white text-center text-sm px-8">
         <p>LIMITED STOCK</p>
         <p>MAX 5 BOXES PER HOUSEHOLD</p>
     </div>
