--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -31,13 +31,13 @@
         <p>MAX 5 BOXES PER HOUSEHOLD</p>
     </div>
   </div>
-  <div class="justify-center items-center flex flex-col ">
+  <div class="justify-center items-center flex flex-col loop">
   
   {%- assign collection = collections[section.settings.collection] -%}
 
   {% for product in collection.products limit: 3 %}
   
-    <a  href="{{ product.url | within: collection }}" class="featured-collection-item mx-5 w-full ">
+    <a  href="{{ product.url | within: collection }}" class="featured-collection-item mx-5 w-full bg-[#F4F6F8]">
       <div class="relative  flex justify-between items-center rounded-t-10 font-bold uppercase px-2 text-white bg-all-night [&:nth-child(2)]:bg-all-day">
         <p class="text-xl">{{ product.title | escape }}</p>
         <p class="text-xs text-right">{{ product.description }}</p>
@@ -82,7 +82,11 @@
     </div>
     
     </div>
-
+{% style %}
+    .loop>a:nth-child(2){
+      background-image: linear-gradient(180deg, #26AAE0 0%, #693D90 64.06%);
+    }
+{% endstyle %}
 
     </a>
   {% else %}
