--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -37,8 +37,8 @@
 
   {% for product in collection.products limit: 3 %}
   
-    <a  href="{{ product.url | within: collection }}" class="featured-collection-item mx-5 w-full bg-[#F4F6F8] bg-all-night [&:nth-child(2)]:bg-all-day">
-      <div class="relative  flex justify-between items-center rounded-t-10 font-bold uppercase px-2 text-white ">
+    <a  href="{{ product.url | within: collection }}" class="featured-collection-item mx-5 w-full  bg-all-night [&:nth-child(2)]:bg-all-day">
+      <div class="relative  flex justify-between items-center rounded-t-10 font-bold uppercase px-2 text-white bg-[#F4F6F8]">
         <p class="text-xl">{{ product.title | escape }}</p>
         <p class="text-xs text-right">{{ product.description }}</p>
       </div>
