--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -37,8 +37,8 @@
 
   {% for product in collection.products limit: 3 %}
   
-    <a  href="{{ product.url | within: collection }}" class="featured-collection-item mx-5 w-full  bg-all-night [&:nth-child(2)]:bg-all-day">
-      <div class="relative  flex justify-between items-center rounded-t-10 font-bold uppercase px-2 text-white bg-[#F4F6F8]">
+    <a  href="{{ product.url | within: collection }}" class="featured-collection-item mx-5 w-full">
+      <div class="relative loop-title flex justify-between items-center rounded-t-10 font-bold uppercase px-2 text-white bg-all-night">
         <p class="text-xl">{{ product.title | escape }}</p>
         <p class="text-xs text-right">{{ product.description }}</p>
       </div>
@@ -83,8 +83,8 @@
     
     </div>
 {% style %}
-    .loop>a>div:nth-child(2){
-      background-image: linear-gradient(180deg, #26AAE0 0%, #693D90 64.06%);
+    .loop>a>div.loop-title:nth-child(2){
+      background-image: linear-gradient(180deg, #FF9900 0%, #EA552E 100%);
     }
 {% endstyle %}
 
