--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -83,7 +83,7 @@
     
     </div>
 {% style %}
-    .loop>a>div.loop-title:nth-child(2){
+    .loop>a:nth-child(2)>div.loop-title{
       background-image: linear-gradient(180deg, #FF9900 0%, #EA552E 100%);
     }
 {% endstyle %}
