--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -73,7 +73,7 @@
       </div>
       <div class="flex flex-row justify-between items-center">
         <div class="flex items-start text-2xl">
-          <span class="relative border-b-2 -top-2">{{product.price | money }}</span>
+          <span class="relative border-b-2 border-black -top-[14px]"> <span class="relative top-[14px]">{{product.price | money }}</span></span>
         </div>
         <div class="flex items-end text-lg text-white">
           {{product.compare_at_price | money }}
