--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -69,21 +69,21 @@
       <div class="w-3/4 flex flex-col text-center items-start">
       <div class="flex flex-row justify-between mt-2 w-full">
         <span class="uppercase text-2xs font-bold">NORMALLY:</span>
-        <span class="uppercase text-2xs font-bold text-white">TODAY:</span>
+        <span class="uppercase text-2xs font-bold text-[#FD1111]">TODAY:</span>
       </div>
       <div class="flex flex-row justify-between items-center w-full">
-        <div class="flex items-start text-2xl">
+        <div class="flex items-start text-3xl">
           <span class="relative border-b-2 border-black -top-[14px]"> <span class="relative top-[14px]">{{product.compare_at_price | money }}</span></span>
         </div>
-        <div class="flex items-end text-lg text-white">
+        <div class="flex items-end text-lg text-[#FD1111]">
           {{product.price | money }}
         </div>
       </div>
-      <div class="text-center text-white mt-4 text-xs w-full">
+      <div class="text-center text-black mt-4 text-base w-full loop-total">
         TOTAL: {{product.price | money }}
       </div>
-      <div class="w-full flex justify-center items-center text-center px-5 py-3 bg-green-500 font-bold text-black text-sm mt-3">
-        <span><svg width="23" height="20" viewBox="0 0 23 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <div class="w-full ml-5 mr-3 flex justify-center items-center text-center px-7 py-3 rounded-20 bg-green-500 font-bold text-black text-sm mt-3">
+        <span><svg class="inline mr-1" width="23" height="20" viewBox="0 0 23 20" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M7.45701 13.3334H19.631C19.9324 13.3334 20.1969 13.1362 20.2785 12.8497L22.974 3.51629C23.0319 3.31508 22.9922 3.09893 22.8646 2.93175C22.7369 2.76508 22.5383 2.66665 22.3263 2.66665H5.90142L5.41974 0.522218C5.3513 0.216838 5.07756 0 4.76171 0H0.673826C0.301467 0 0 0.298262 0 0.666661C0 1.03523 0.301467 1.33332 0.673826 1.33332H4.22089L6.65421 12.1666C5.93827 12.4746 5.43553 13.1796 5.43553 14.0001C5.43553 15.1028 6.34239 16 7.45701 16H19.631C20.0035 16 20.3048 15.702 20.3048 15.3334C20.3048 14.965 20.0035 14.6667 19.631 14.6667H7.45701C7.08588 14.6667 6.78318 14.3679 6.78318 14.0001C6.78318 13.6322 7.08588 13.3334 7.45701 13.3334Z" fill="black"/>
           <path d="M6.78318 18C6.78318 19.103 7.69004 20 8.80483 20C9.91945 20 10.8263 19.103 10.8263 18C10.8263 16.8972 9.91945 16 8.80483 16C7.69004 16 6.78318 16.8972 6.78318 18Z" fill="black"/>
           <path d="M16.2618 18C16.2618 19.103 17.1687 20 18.2833 20C19.3981 20 20.3048 19.103 20.3048 18C20.3048 16.8972 19.3981 16 18.2833 16C17.1687 16 16.2618 16.8972 16.2618 18Z" fill="black"/>
@@ -111,6 +111,9 @@
     }
     .loop>a:nth-child(2)>div.loop-content{
       background-image: linear-gradient(180deg, #26AAE0 0%, #693D90 64.06%);
+    }
+    .loop>a:nth-child(2)>div.loop-total{
+      color: white;
     }
 {% endstyle %}
 
