--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -146,7 +146,7 @@
         <p class="text-base mt-5">Tens of thousands of people have used PHEN24 to accelerate their weight loss efforts and help them create a slimmer, sexier body. That's how we know you'll be thrilled with how your body responds to PHEN24. But just in case you're still not sure, we're willing to offer you this guarantee so you can purchase PHEN24 with absolute confidence...</p>
         <p class="text-base mt-4">Simply try PHEN24 for 60 days — and if it doesn't live up to everything we promised on this page — simply return your bottles (even if they're empty) within 60 days and we will issue you a full refund as soon as we receive your return.</p>
       </div>
-      <div class="relative flex justify-center place-items-center">
+      <div class="relative flex justify-center place-items-center mb-5">
         <a class=" text-lg justify-center text-black flex w-[300px] items-center py-2 whitespace-nowrap px-8 rounded-20 
         font-normal bg-green-500 uppercase" href="#some_id">
         Order <span class="font-bold mr-2"> now</span> <svg width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
