--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -112,7 +112,7 @@
       .loop>a:nth-child(2)>div.loop-content{
         background-image: linear-gradient(180deg, #26AAE0 0%, #693D90 64.06%);
       }
-      .loop>a:nth-child(2)>div.loop-total{
+      .loop>a:nth-child(2)>div>div.loop-total{
         color: white;
       }
   {% endstyle %}
